# Grapheus

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
grapheus-utils/: .makefile.swp  grapheus-utils  main.cpp  makefile
grapheus-utils/chess/: bitboard.h  chess.h  piecelist.h  position.h  positionmeta.h  result.h
grapheus-utils/dataset/: dataset.h
grapheus-utils/misc/: assert.h
resources/: loss_plot.py
src/: main.cu
src/binpack/: nnue_data_binpack_format.h  rng.h
src/chess/: bitboard.h  defs.h  fenparsing.h  piece.h  piecelist.h  position.h  positionmeta.h  result.h  square.h
src/data/: array.h  device.h  matrix.h  matrix_dense.h  matrix_sparse.h  sarray.h
src/dataset/: batchloader.h  binpackloader.h  dataset.h  io.h  process.h  utils.h
src/debug/: assert.h
src/math/: functions.h  random.cu  random.h
src/misc/: assert.h  csv.cu  csv.h  start.cu  start.h  timer.cu  timer.h
src/models/: berserk.h  chessmodel.h  chessmodelbinpack.h  koimodel.h  kpmodel.h  ricemodel.h
src/nn/: activation.h  affine.h  affine_batched.h  affine_multi.h  distribute.h  layer.h  layers.h  merge.h  nn.h  select.h  select_single.h  split.h  tape.h
src/nn/layers/: activation.h  affine.h  affine_batched.h  affine_multi.h  chunkwise_mul.h  distribute.h  feature_transformer.h  input.h  layer.h  layers.h  merge.h  select.h  select_single.h  split.h  tape.h  weighted_sum.h
src/nn/losses/: loss.h  losses.h  mpe.h  mse.h
src/nn/model/: model.h  quantization.h
src/nn/optimizer/: adam.h  adam_warmup.h  (+4 more)
src/operations/: gradient_operation.h  operations.h
(+52 files in other folders)
